# MetricsManager

./: CMakeLists.txt  main.cpp
control/: eventprocessor.cpp  eventprocessor.h  filemanager.cpp  filemanager.h  metricsmanager.cpp  metricsmanager.h
data/: metrics.cpp  metrics.h  timedata.cpp  timedata.h
